--- a/my-book-app/package.json
+++ b/my-book-app/package.json
@@ -11,14 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
+    "@angular/animations": "^19.2.12",
+    "@angular/common": "^19.2.12",
+    "@angular/compiler": "^19.2.12",
+    "@angular/core": "^19.2.12",
+    "@angular/forms": "^19.2.12",
+    "@angular/platform-browser": "^19.2.12",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
+    "@angular/router": "^19.2.12",
     "@angular/ssr": "^19.2.13",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
